# Volcanic-Earthquake-Classification-using-Transformer-Encoder

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  stations.csv  summary.py  train.py
modules/: ExplanationGenerator.py  dataset.py  layers.py  model_rpr.py  models.py  transformer.py  transformer_rpr.py
tests/: test_dataset.py  test_model_utils.py
tools/: generate_mock_data.py
