[project]
name = "volcanic-earthquake-classification-using-transformer-encoder"
version = "0.1.0"
description = "Volcanic earthquake classification with a Transformer encoder and relative positional representation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "einops>=0.8.0",
  "matplotlib>=3.8.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "torch>=2.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
